--- a/src/client/site/tutorial_page/tutorial_page.scss
+++ b/src/client/site/tutorial_page/tutorial_page.scss
@@ -62,3 +62,17 @@
         }
     }
 }
+
+@include screen-size(mobile) {
+    .view__tutorial_page {
+        .video-container {
+            flex-direction: column;
+            flex-wrap: nowrap;
+            justify-content: stretch;
+
+            & > * {
+                width: inherit;
+            }
+        }
+    }
+}
